@@ -1663,3 +1663,27 @@ SCM g_rc_drag_can_move(SCM mode)
 		   default_drag_can_move,
 		   2);
 }
+
+/*! \todo Finish function documentation!!!
+ *  \brief
+ *  \par Function Description
+ *
+ */
+SCM g_rc_mousepan_gain(SCM gain)
+{
+  int val;
+
+  SCM_ASSERT (SCM_INUMP (gain), gain, SCM_ARG1, "mousepan-gain");
+  
+  val = SCM_INUM (gain);
+
+  if (val <= 0) {
+    fprintf(stderr, _("Invalid gain [%d] passed to mousepan-gain\n"),
+            val);
+    val = 5; /* absolute default */
+  }
+
+  default_mousepan_gain = val;
+
+  return SCM_BOOL_T;
+}
