@@ -3,6 +3,9 @@
 	* include/defines.h: Applied mouse pan patch by Peter Clifton. 
 	(Patch #1527361): Allow middle button panning in gschem
 
+	* include/struct.h, src/s_toplevel.c: Added variables to support
+	(mousepan-gain #) rc keyword.
+
 2006-07-23  Mike Jarabek  <mjarabek@istop.com>
 
 	* src/o_text_basic.c: Fixed 180 degree rotated text so that it
